# leptos-pdf

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  style.css  vite.config.js
.github/workflows/: publish.yml  release-please.yml
examples/reader/: Cargo.toml  index.html
examples/reader/src/: main.rs
javascript/: init_pdfium.js  pdf_glue.js
src/: bindings.rs  components.rs  errors.rs  lib.rs  prelude.rs
src/bindings/: pdfjs.rs
src/bindings/pdfjs/: pdf.rs
src/components/: pdf_document.rs  pdf_page.rs  pdf_renderer.rs  pdf_viewer.rs  pdfium.rs
styles/: pdf_renderer.scss
